--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@svgr/webpack": "^8.0.1",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
